# stg-to-sidebery

./: LICENSE  README.md  convert_stg_to_sidebery.py  pyproject.toml
