[project]
name = "stg-to-sidebery"
version = "0.1.0"
description = "Convert Simple Tab Groups backup to Sidebery snapshot"
authors = [
    {name = "tech189", email = ""},
]
dependencies = []
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

